syntax = "proto3";

package activity;

import "common.proto";

service ActivityService {
    rpc search(ActivitySearchRequest) returns (ActivitySearchResponse);
    rpc clearAll(ActivityClearAllRequest) returns (ActivityClearAllResponse);
    rpc create(ActivityCreateRequest) returns (ActivityCreateResponse);
    rpc head(ActivityHeadRequest) returns (ActivityHeadResponse);
}

message ActivitySearchRequest {
    common.ContextDTO context = 1;
    common.SearchQueryDTO search = 2;
}

message ActivitySearchResponse {
    repeated ActivityDTO activities = 1;
    int32 totalResults = 2;
    int32 totalPages = 3;
    int32 currentPage = 4;
}

message ActivityClearAllRequest {
    common.ContextDTO context = 1;
}

message ActivityClearAllResponse {
    bool success = 1;
}

message ActivityCreateRequest {
    common.ContextDTO context = 1;
    ActivityDTO data = 2;
}

message ActivityCreateResponse {
    bool success = 1;
}

message ActivityHeadRequest {
    common.ContextDTO context = 1;
    int32 limit = 2;
}

message ActivityHeadResponse {
    repeated ActivityDTO activities = 1;
}

message ActivityDTO {
    string id = 1;
    string label = 2;
    ActivityEventNameEnumDTO eventName = 3;
    string relatedTargetEntity = 4;
    string relatedTargetId = 5;
    string relatedEntityName = 6;
    int64 createdAt = 7;
    string user = 8;
    string world = 9;
    string campaign = 10;
}

enum ActivityEventNameEnumDTO {
    CONTENT_CREATED = 0;
    CONTENT_UPDATED = 1;
    CONTENT_DELETED = 2;
    CONTENT_CREATED_BULK = 3;
    CONTENT_UPDATED_BULK = 4;
    CONTENT_DELETED_BULK = 5;
    WORLD_PRESET_LOADED = 6;
}